# L510-Manager

./: README.md  com.wolfteck.L510Manager.json  meson.build  org.example.App.json
data/: com.wolfteck.L510Manager.appdata.xml.in  com.wolfteck.L510Manager.desktop.in  com.wolfteck.L510Manager.gschema.xml  meson.build  org.example.App.gschema.xml
po/: POTFILES  meson.build
src/: dialogs.vala  filedialog.vala  l510_manager.gresource.xml  main.vala  meson.build  parameters.vala  vfd.vala  window.ui  window.vala
src/json/: canjson.pl  dat2json.pl  devices.json  parameter_sets.json  parameters.json  unhash.pl
src/vapi/: libmodbus.vapi
